tests/fail/external-state.el
(import core)
(using core)


(do
 (bind x (ref true))
 (do
  (pure (run (get x)))))
	   
